Apply Spotless formatting and fix all RuntimeException violations
## Code Quality Improvements

### Spotless Maven Plugin (v2.43.0)
- Removed all 62 unnecessary imports
- Organized imports (java, javax, jakarta, then others)
- Fixed code formatting and trailing whitespace
- Added consistent annotation formatting
- Ensured newlines at end of files

### PMD Violations Fixed
Fixed all 62 AvoidThrowingRawExceptionTypes violations by replacing
RuntimeException with appropriate ProxmoxException factory methods:

**API Layer (2 files, 5 violations):**
- ResourceEndpoint.java: getNodeResources lambda, buildFederationClusterResourcesResponse
- StorageResource.java: Storage not found, no nodes available

**Service Layer (11 files, 45 violations):**
- BackupAnalyticsService.java: 5 calculation failures
- BackupLifecycleService.java: 4 retention/cleanup failures
- BackupService.java: 5 task ID failures (plus 11+ other violations)
- SnapshotService.java: 11 VM operations (not found, conflicts, failures)
- TaskService.java: 5 task operations
- PoolService.java: 4 pool operations
- VMService.java: 4 VM operations (clone, import, EFI)
- NodePlacementService.java: 4 placement failures
- PowerService.java: 1 VM selector failure
- ConsoleService.java: 1 console access failure
- ClusterProvisioningService.java: 1 provisioning failure

**Client Layer (1 file, 1 violation):**
- CreateVMRequest.java: SSH key encoding failure

**Federation Layer (1 file, 5 violations):**
- ProxmoxResourceProvider.java: 5 resource provider failures

**Scheduler Layer (1 file, 1 violation):**
- MoxxieScheduledJob.java: Job execution failure

### Key Benefits
- ✅ Proper HTTP status codes (404, 409, 412, 500)
- ✅ Structured error details with error codes
- ✅ Better context in error messages
- ✅ Actionable suggestions for resolution
- ✅ Exception chaining preserved

### PMD Results
**Before:** 1,115 total violations (87 Priority 1)
**After:** 973 total violations (25 Priority 1)
**Fixed:** 142 violations (62 Pr