@@ -1,12 +1,12 @@
 package com.coffeesprout.api;
 
-import com.coffeesprout.api.dto.ErrorResponse;
-import com.coffeesprout.api.dto.VMResponse;
-import com.coffeesprout.service.TagService;
-import com.coffeesprout.service.VMService;
-import com.coffeesprout.service.SafeMode;
-import com.coffeesprout.util.TagUtils;
-import io.smallrye.common.annotation.RunOnVirtualThread;
+import java.util.ArrayList;
+import java.util.HashSet;
+import java.util.List;
+import java.util.Map;
+import java.util.Set;
+import java.util.stream.Collectors;
+
 import jakarta.enterprise.context.ApplicationScoped;
 import jakarta.inject.Inject;
 import jakarta.validation.Valid;
@@ -15,6 +15,14 @@ import jakarta.validation.constraints.NotNull;
 import jakarta.ws.rs.*;
 import jakarta.ws.rs.core.MediaType;
 import jakarta.ws.rs.core.Response;
+
+import com.coffeesprout.api.dto.ErrorResponse;
+import com.coffeesprout.api.dto.VMResponse;
+import com.coffeesprout.service.SafeMode;
+import com.coffeesprout.service.TagService;
+import com.coffeesprout.service.VMService;
+import com.coffeesprout.util.TagUtils;
+import io.smallrye.common.annotation.RunOnVirtualThread;
 import org.eclipse.microprofile.openapi.annotations.Operation;
 import org.eclipse.microprofile.openapi.annotations.media.Content;
 import org.eclipse.microprofile.openapi.annotations.media.Schema;
@@ -26,13 +34,6 @@ import org.eclipse.microprofile.openapi.annotations.tags.Tag;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 
-import java.util.ArrayList;
-import java.util.HashSet;
-import java.util.List;
-import java.util.Map;
-import java.util.Set;
-import java.util.stream.Collectors;
-
 @Path("/api/v1/tags")
 @Produces(MediaType.APPLICATION_JSON)
 @Consumes(MediaType.APPLICATION_JSON)
@@ -40,15 +41,15 @@ import java.util.stream.Collectors;
 @RunOnVirtualThread
 @Tag(name = "Tags", description = "Tag management endpoints")
 public class TagResource {
-    
+
     private static final Logger LOG = LoggerFactory.getLogger(TagResource.class);
-    
+
     @Inject
     TagService tagService;
-    
+
     @Inject
     VMService vmService;
-    
+
     @GET
     @SafeMode(false)  // Read operation
     @Operation(summary = "Get all unique tags", description = "Get all unique tags in use across all VMs")
@@ -69,7 +70,7 @@ public class TagResource {
                     .build();
         }
     }
-    
+
     @GET
     @Path("/{tag}/vms")
     @SafeMode(false)  // Read operation
@@ -86,21 +87,21 @@ public class TagResource {
             @Parameter(description = "Tag to search for", required = true, example = "client-nixz")
             @PathParam("tag") String tag) {
         try {
-            if (tag == null || tag.trim().isEmpty()) {
+            if (tag == null || tag.isBlank()) {
                 return Response.status(Response.Status.BAD_REQUEST)
                         .entity(new ErrorResponse("Tag cannot be empty"))
                         .build();
             }
-            
+
             // Get VM IDs with this tag
             List<Integer> vmIds = tagService.getVMsByTag(tag, null);
-            
+
             // Get full VM information
             List<VMResponse> allVMs = vmService.listVMs(null);
             List<VMResponse> taggedVMs = allVMs.stream()
                 .filter(vm -> vmIds.contains(vm.vmid()))
                 .collect(Collectors.toList());
-            
+
             return Response.ok(taggedVMs).build();
         } catch (Exception e) {
             LOG.error("Failed to get VMs by tag: " + tag, e);
@@ -109,7 +110,7 @@ public class TagResource {
                     .build();
         }
     }
-    
+
     @POST
     @Path("/bulk")
     @SafeMode(operation = SafeMode.Operation.WRITE)
@@ -139,13 +140,13 @@ public class TagResource {
                         .entity(new ErrorResponse("Either vmIds or namePattern must be provided"))
                         .build();
             }
-            
+
             if (request.tags() == null || request.tags().isEmpty()) {
                 return Response.status(Response.Status.BAD_REQUEST)
                         .entity(new ErrorResponse("Tags list cannot be empty"))
                         .build();
             }
-            
+
             // Validate all tags
             for (String tag : request.tags()) {
                 if (!TagUtils.isValidTag(tag)) {
@@ -154,10 +155,10 @@ public class TagResource {
                             .build();
                 }
             }
-            
+
             // Determine which VMs to update
             List<Integer> targetVmIds = new ArrayList<>();
-            
+
             if (vmIds != null && !vmIds.isEmpty()) {
                 // Parse VM IDs from comma-separated string
                 for (String id : vmIds.split(",")) {
@@ -173,26 +174,26 @@ public class TagResource {
                 // Find VMs by name pattern
                 targetVmIds = tagService.findVMsByNamePattern(namePattern, null);
                 if (targetVmIds.isEmpty()) {
-                    return Response.ok(new BulkTagResponse(Map.of(), 
+                    return Response.ok(new BulkTagResponse(Map.of(),
                         "No VMs found matching pattern: " + namePattern)).build();
                 }
             }
-            
+
             // Perform the operation
             Map<Integer, String> results;
             Set<String> tagSet = new HashSet<>(request.tags());
-            
+
             if (request.action() == BulkTagRequest.Action.ADD) {
                 results = tagService.bulkAddTags(targetVmIds, tagSet, null);
             } else {
                 results = tagService.bulkRemoveTags(targetVmIds, tagSet, null);
             }
-            
+
             // Count successes
             long successCount = results.values().stream()
                 .filter("success"::equals)
                 .count();
-            
+
             String message = String.format("%s %d tags %s %d/%d VMs successfully",
                 request.action() == BulkTagRequest.Action.ADD ? "Added" : "Removed",
                 request.tags().size(),
@@ -200,7 +201,7 @@ public class TagResource {
                 successCount,
                 targetVmIds.size()
             );
-            
+
             return Response.ok(new BulkTagResponse(results, message)).build();
         } catch (Exception e) {
             LOG.error("Failed to perform bulk tag operation", e);
@@ -209,25 +210,24 @@ public class TagResource {
                     .build();
         }
     }
-    
+
     // DTOs
-    
+
     @Schema(description = "List of unique tags in use")
     public record TagsListResponse(
         @Schema(description = "All unique tags", example = "[\"moxxie\", \"client-nixz\", \"env-prod\"]")
         Set<String> tags,
-        
+
         @Schema(description = "Total number of unique tags", example = "3")
         int count
     ) {}
-    
+
     @Schema(description = "Bulk tag operation request")
     public record BulkTagRequest(
         @Schema(description = "Action to perform", required = true, example = "ADD")
-        @NotNull(message = "Action is required")
-        Action action,
-        
-        @Schema(description = "Tags to add or remove", required = true, 
+        @NotNull(message = "Action is required") Action action,
+
+        @Schema(description = "Tags to add or remove", required = true,
                 example = "[\"client-nixz\", \"env-prod\"]")
         @NotEmpty(message = "Tags list cannot be empty")
         List<String> tags
@@ -237,14 +237,14 @@ public class TagResource {
             REMOVE
         }
     }
-    
+
     @Schema(description = "Bulk tag operation response")
     public record BulkTagResponse(
-        @Schema(description = "Results per VM ID", 
+        @Schema(description = "Results per VM ID",
                 example = "{\"101\": \"success\", \"102\": \"error: VM not found\"}")
         Map<Integer, String> results,
-        
-        @Schema(description = "Summary message", 
+
+        @Schema(description = "Summary message",
                 example = "Added 2 tags to 3/4 VMs successfully")
         String message
     ) {}
